--- a/Basispagina/Triple-Energy-main/navagatie bar/css/global.css
+++ b/Basispagina/Triple-Energy-main/navagatie bar/css/global.css
@@ -151,5 +151,30 @@ body{
     #openbtn{
       display: none;
     }
+
+    #banner-img {
+      width: 100vw;
+  }
+
+  .alinea {
+      color: white;
+  }
+
+  .alinea h1 {
+      text-align: center;
+      margin: 3vh;
+  }
+
+  .alinea-flex {
+      display: flex;
+      width: 90vw;
+      margin: auto;
+  }
+
+  .section_img{
+      width: 20vw;
+      margin-left: 10vw;
+      
+  }
     
 }
