--- a/landingspagina/css/style.css
+++ b/landingspagina/css/style.css
@@ -72,7 +72,29 @@
 	}
 	
 	#banner-img {
-		width: 100vw;
+		width: 100%;
 	}
+
+	/* links */
+
+		/* unvisited link */
+		a:link {
+			color: white;
+		}
+		
+		/* visited link */
+		a:visited {
+			color: white;
+		}
+		
+		/* mouse over link */
+		a:hover {
+			color: #71df35;
+		}
+		
+		/* selected link */
+		a:active {
+			color:white;
+		}
     
 }
