--- a/landingspagina/css/global.css
+++ b/landingspagina/css/global.css
@@ -104,7 +104,7 @@ body{
     }
 
     header{
-        width: 100vw;
+        width: 100%;
         height: 120px;
         background-color: #356F97;
     }
